feat(ModalidadePagamento): New payment method module
